manifests/hashgenerator-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hashgenerator-svc
spec:
  type: ClusterIP
  selector:
    app: hashgenerator
  ports:
    - port: 6767
      protocol: TCP
      targetPort: 6000
