manifests/pingpong-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - port: 4545
      protocol: TCP
      targetPort: 3001
