manifests/hashgenerator-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hashgenerator-ing
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hashgenerator-svc
            port:
              number: 6767
