manifests/todoapp-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-ing
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todoapp-svc
            port:
              number: 2323
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 4545
      - path: /hashgenerator
        pathType: Prefix
        backend:
          service:
            name: hashgenerator-svc
            port:
              number: 6767
